<resources>
    <string name="app_name">e-Shop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_your_email_and_password">Sign up with your email and password</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_with_your_email_and_password">Sign in with your email and password</string>
    <string name="sign_in_">Continue</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up_loginButton">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="title">Title</string>
    <string name="product_price">Product_price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="pick_quantity">Pick Quantity</string>
    <string name="click_to_confirm_quantity_selected">Click, To Confirm Quantity Selected</string>
    <string name="quantity">Quantity :</string>
    <string name="complete_your_order">COMPLETE YOUR ORDER</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="order">Order :</string>
    <string name="add_quantityText">+</string>
    <string name="_0">0</string>
    <string name="subtract_quantity_text">-</string>
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>