<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_in_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sign_in_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="50dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sign_in_with_your_email_and_password"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:layout_marginTop="150dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColorHint="@color/design_default_color_primary"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_emailEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="25dp"
        android:hint="@string/password"
        android:textColorHint="@color/design_default_color_primary"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/sign_in_email"
        android:layout_marginTop="15dp"
        android:paddingLeft="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_password_edittext"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_in_password"
        android:text="@string/sign_in_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_marginTop="65dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/dont_have_an_account"
        android:layout_marginLeft="85dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_loginButton"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toEndOf="@id/account_text"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_password"
        app:layout_constraintStart_toStartOf="@+id/sign_in_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>