<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_up_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:padding="50dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/create_acc_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Create Account"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_up_with_your_email_and_password"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/create_acc_text"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_acc_text"
            android:layout_marginTop="150dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColorHint="@color/design_default_color_primary"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_emailEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="25dp"
            android:hint="@string/password"
            android:textColorHint="@color/design_default_color_primary"
            app:endIconMode="password_toggle"
            android:layout_below="@id/sign_up_email"
            android:layout_marginTop="15dp"
            android:paddingLeft="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_password_edittext"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_password"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_marginTop="65dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/already_have_an_account"
       android:layout_marginLeft="85dp"
        android:layout_below="@id/signup_button"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/Signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_below="@id/signup_button"
        android:layout_toRightOf="@id/account_text"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />


</RelativeLayout>